Fix spacing near tags label

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -603,7 +603,7 @@ border-bottom:1px solid #777;
 border-right:1px solid #777;
 color:#777;
 line-height:3;
-margin:5px 5px 5px 0;
+margin:5px;
 padding:3px 4px;
 text-decoration:none;
 white-space:nowrap;
